# ChatToFind

./: .env.example  Makefile  README.md  es_create_index.py  es_insert_jobs.py  insert_jobs.py  insert_jobs.sql  jobs.sql  pyproject.toml  railway.json  requirements.txt
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
app/database/: opensearch.py  pinecone.py  postgresql.py  queries.py
app/llm/: chat.py  generate_query.py  generate_search_query.py
app/static/css/: details.css  main.css
app/static/js/: chat.js  main.js  search.js
app/templates/: index.html  job_detail.html  pinecone_job_detail.html  pinecone_jobs.html
app/utils/: conversation_history.py  parse_json.py
scripts/: es_delete_items.py  pinecone_delete_jobs.py  pinecone_insert_jobs.py  pinecone_retrieve_test.py
