[tool.poetry]
name = "chat-to-find"
version = "0.1.0"
description = ""
authors = ["h-k-nyosu <kuro.h1020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
Jinja2 = "^3.1.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
langchain = "^0.0.150"
openai = "^0.27.4"
jsonfinder = "^0.4.2"
requests-aws4auth = "^1.2.2"
opensearch-py = "^2.2.0"
opensearch-dsl = "^2.1.0"
boto3 = "^1.26.124"
pinecone-client = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
